# TerraVision-AI

./: .coverage  .dockerignore  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  api.py  app.py  convert_secrets.py  docker-compose.yml  index.html  make_secrets.py  pyproject.toml  requirements.txt  train.py  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
agent/: eval.py  loop.py  tools.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: predict.js
frontend/src/components/: ConfidenceBar.jsx  PredictForm.jsx  ResultsPanel.jsx  SatMap.jsx
frontend/src/styles/: global.css
mnt/user-data/outputs/lint-fix/terravision/: train.py
models/: terravision_v1.pth  terravision_v2.pth  training_stats.json
terravision/: __init__.py  core.py  train.py
tests/: conftest.py  test_api.py  test_core.py
